Fixed scrollbar and caption positioning problem
Caption was not moving at a faster speed from splash image

Scrollbar now stays in sync with cursor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ a {
   display: block;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 .splash-overlay {
   position: absolute;
@@ -132,7 +133,7 @@ a {
   border-radius: 8px;
   padding: 8px;
 }
-.splash-box h3 {
+.splash h3 {
   color: #fafafa;
   font-family: "Consolas", sans-serif;
   font-size: 18px;
